# visual-studio

./: README.md
CMake-Project/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
CMake-Project/escape-the-valley/: CMakeLists.txt  cmake_install.cmake  escape-the-valley.cpp  escape-the-valley.h
CMake-Project/escape-the-valley/include/crops/: Crop.h  Crops.h
CMake-Project/escape-the-valley/include/farmer/: Player.h
CMake-Project/escape-the-valley/include/festivals/: Festival.h  Festivals.h
CMake-Project/escape-the-valley/include/locations/: Location.h
CMake-Project/escape-the-valley/include/residences/: Residence.h
CMake-Project/escape-the-valley/include/seasons/: Season.h  Seasons.h
CMake-Project/escape-the-valley/include/shops/: Shop.h
CMake-Project/escape-the-valley/include/tools/: Tool.h
CMake-Project/escape-the-valley/include/villagers/: Character.h
CMake-Project/escape-the-valley/src/: main.cpp
CMake-Project/escape-the-valley/src/crops/: Crop.cpp  Crops.cpp
CMake-Project/escape-the-valley/src/farmer/: Player.cpp
CMake-Project/escape-the-valley/src/festivals/: Festival.cpp  Festivals.cpp
CMake-Project/escape-the-valley/src/locations/: Location.cpp  Town.cpp
CMake-Project/escape-the-valley/src/residences/: 1RiverRoad.cpp  Residence.cpp
CMake-Project/escape-the-valley/src/seasons/: Season.cpp  Seasons.cpp  Spring.cpp
CMake-Project/escape-the-valley/src/shops/: PierresShop.cpp  Shop.cpp
CMake-Project/escape-the-valley/src/tools/: Hoe.cpp  Tool.cpp
CMake-Project/escape-the-valley/src/villagers/: Character.cpp
(+1 files in other folders)
